tests/parser_samples/valid/comments.mas
%i #a a(1);

i1
{

# } # }
a; #
# b;
c | d;
}