tests/parser_samples/invalid/bit_masks/1.mas
%i a(3) {
    a |
    b(1)
    c
    ;
}